add studyState, participant data and finishText to study info
