# src/main/java/io/redlink/more/data/model/SimpleParticipant.java
@@ -1,0 +1,7 @@
+package io.redlink.more.data.model;
+
+public record SimpleParticipant(
+        int id,
+        String alias
+) {
+}
