# src/main/java/io/redlink/more/data/model/Study.java
@@ -1,5 +1,7 @@
 package io.redlink.more.data.model;
 
+import io.redlink.more.data.api.app.v1.model.StudyDTO;
+
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.List;
@@ -9,12 +11,15 @@ public record Study(
         String title,
         boolean active,
         String participantInfo,
+        String finishText,
+        String studyState,
         String consentInfo,
         Contact contact,
         LocalDate startDate,
         LocalDate endDate,
         List<Observation> observations,
         Instant created,
-        Instant modified
+        Instant modified,
+        SimpleParticipant participant
 ) {
 }
